# Filament-Manager

./: .gitignore  README.md  config.yaml  pyproject.toml
data/: filaments.db
filament_manager/: app.py  models.py  widgets.py
filament_manager/styles/: style.css
